Refactor common variables

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,10 +18,10 @@ pool:
 
 steps:
 - task: UseDotNet@2
-  displayName: 'Use .NET Core SDK 3.1.100'
+  displayName: 'Use .NET Core SDK $(dotnetSdkVersion)'
   inputs:
     packageType: sdk
-    version: '$(dotnetSdkVersion)'
+    version: 3.1.100
 
 - task: Npm@1
   displayName: 'Run npm install'
